--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: IC - Build & Deploy
+name: CI - Build & Deploy
 
 on:
   push:
@@ -9,16 +9,11 @@ jobs:
 
   build_front:
     name: Build React Front
-    runs-on: ubuntu-latest
+    runs-on: episen-domotique
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
 
       - name: Install dependencies
         working-directory: ./front
@@ -36,18 +31,12 @@ jobs:
 
   build_backend:
     name: Build Spring Backend
-    runs-on: ubuntu-latest
+    runs-on: episen-domotique
     needs: build_front
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 17
 
       - name: Build backend
         working-directory: ./backend
@@ -61,8 +50,8 @@ jobs:
 
   deploy:
     name: Deploy to Integration Server
-    runs-on: ubuntu-latest
-    needs: build_backend
+    runs-on: episen-domotique
+    needs: [build_front, build_backend]
 
     steps:
       - name: Download front build
@@ -80,26 +69,27 @@ jobs:
       - name: Copy front via SCP
         uses: appleboy/scp-action@v0.1.4
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
+          host: ${{ vars.INTEG_HOST }}
+          username: ${{ vars.INTEG_USER }}
+          key: ${{ secrets.INTEG_SSH_KEY }}
           source: "front-dist/*"
           target: "/var/www/html"
+          rm: true
 
       - name: Copy backend via SCP
         uses: appleboy/scp-action@v0.1.4
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
+          host: ${{ vars.INTEG_HOST }}
+          username: ${{ vars.INTEG_USER }}
+          key: ${{ secrets.INTEG_SSH_KEY }}
           source: "backend-dist/*.jar"
-          target: "/opt/app/"
+          target: "/opt/app/backend.jar"
+          rm: true
 
       - name: Restart backend service
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            sudo systemctl restart backend
+          host: ${{ vars.INTEG_HOST }}
+          username: ${{ vars.INTEG_USER }}
+          key: ${{ secrets.INTEG_SSH_KEY }}
+          script: sudo systemctl restart domotique
