--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -2,11 +2,13 @@
 
 # Postgres DataSource
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/esiag_proto
-spring.datasource.username=test
+spring.datasource.url=jdbc:postgresql://172.31.250.3:5432/esiag_proto
+spring.datasource.username=sirius
 spring.datasource.password=test
 
 ## JPA/Hibernate
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+server.servlet.contextPath=/api
