--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "konva": "^9.2.0",
+    "react-konva": "^18.2.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +41,9 @@
   },
   "devDependencies": {
     "react-router-dom": "^6.16.0"
+  },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
   }
 }
