--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 # Postgres DataSource
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/domotique?ssl=false
+spring.datasource.url=jdbc:postgresql://172.31.250.3:5432/domotique?ssl=false
 spring.datasource.username=sirius
 spring.datasource.password=test
 
